<resources>
    <string name="app_name">Notepad Memory</string>
    <string name="title">Title</string>
    <string name="action_arrange">Arrange</string>
    <string name="action_search">Search</string>
    <string name="action_menu">Menu</string>
    <string name="note">Note...</string>
    <string name="color">Color</string>
    <string name="sort">Sort by</string>
    <string name="back_up">Backup</string>
    <string name="backup_infor">Beta test! sdcard/backup.db</string>
    <string name="restore">Restore</string>
    <string name="select_color">Select a color</string>
    <string name="Recently_updated">Recently updated</string>
    <string name="Date_created">Date created</string>
    <string name="By_title">By title</string>
    <string name="Text_View">TextView</string>
    <string name="Build">Click "+" button to create new note.</string>

</resources>
