<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewTitleRestore"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/textbox_boder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/title"
        android:textStyle="bold"
        android:textSize="18dp"
        android:maxLength="25"
        />

    <TextView
        android:id="@+id/textViewNoteRestore"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/textbox_boder"
        android:layout_below="@+id/textViewTitleRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:lines="5"
        android:hint="@string/note"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/textViewTimeRestore"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill"
        android:gravity="fill"
        android:layout_marginTop="240dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/textViewNoteRestore" />

    <Button
        android:id="@+id/buttonRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#499b52"
        android:text="@string/restore"
        android:textColor="#ffffff"
        android:textSize="17dp" />



</RelativeLayout>